fscore implementation is done...

--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -288,7 +288,6 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import pandas as pd\n",
     "from six import iteritems\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -316,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_elec.plot()"
+    "train_elec.mains().plot()"
    ]
   },
   {
@@ -352,10 +351,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = time.time()\n",
     "from nilmtk.disaggregate import CombinatorialOptimisation\n",
     "from nilmtk.tests.testingtools import data_dir\n",
     "\n",
+    "start = time.time()\n",
     "co = CombinatorialOptimisation()\n",
     "co.train(train_elec)\n",
     "end = time.time()\n",
@@ -371,14 +370,14 @@
     "pred = {}\n",
     "gt= {}\n",
     "\n",
-    "for i, chunk in enumerate(test_elec.mains().load()):\n",
-    "    chunk_drop_na = chunk.dropna()\n",
+    "for i, chunk in enumerate(test_elec.mains().load(sample_period=6)):\n",
+    "    chunk_drop_na = (chunk).dropna()\n",
     "    pred[i] = co.disaggregate_chunk(chunk_drop_na)\n",
     "    gt[i]={}\n",
     "    \n",
     "    for meter in test_elec.submeters().meters:\n",
     "        # Only use the meters that we trained on (this saves time!)    \n",
-    "        gt[i][meter] = next(meter.load())\n",
+    "        gt[i][meter] = next(meter.load(sample_period=6))\n",
     "    gt[i] = pd.DataFrame({k:v.squeeze() for k,v in iteritems(gt[i])}, index=next(iter(gt[i].values())).index).dropna()"
    ]
   },
@@ -470,8 +469,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_overall.head(1000).plot(label=\"Pred\")\n",
-    "gt_overall.head(1000).plot(label=\"GT\")\n",
+    "pred_overall.plot(title=\"Pred\",figsize=(15,5))\n",
+    "gt_overall.plot(title=\"GT\",figsize=(15,5))\n",
     "plt.legend()"
    ]
   },
@@ -481,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -491,8 +490,15 @@
    "outputs": [],
    "source": [
     "rms_error = {}\n",
+    "threshold_w = 0\n",
     "for appliance in gt_overall.columns:\n",
-    "    rms_error[appliance] = np.sqrt(mean_squared_error(gt_overall[appliance], pred_overall[appliance]))"
+    "    temp_gt = gt_overall[appliance].copy()\n",
+    "    temp_gt[temp_gt<=threshold_w] = 0\n",
+    "    temp_gt[temp_gt>threshold_w] = 1\n",
+    "    temp_pred = pred_overall[appliance].copy()\n",
+    "    temp_pred[temp_pred<=threshold_w] = 0\n",
+    "    temp_pred[temp_pred>threshold_w] = 1\n",
+    "    rms_error[appliance] = f1_score(temp_gt, temp_pred)"
    ]
   },
   {
@@ -501,13 +507,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.Series(rms_error)"
+    "rms_error"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk)",
+   "display_name": "Python (nilmtk5)",
    "language": "python",
    "name": "nilmtk-env"
   },
