--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -366,9 +366,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def disaggr_and_fscore(algorithm,train_elec, test_elec,show_debug=True):\n",
+    "def disaggr_and_fscore(algorithm,train_elec, test_elec,train_timezone,show_debug=True):\n",
     "    start = time.time()\n",
-    "    algorithm.train(train_elec)\n",
+    "    algorithm.train(train_elec,sample_period=6)\n",
     "    end = time.time()\n",
     "    print(\"Train runtime =\", end-start, \"seconds.\")\n",
     "    pred = {}\n",
@@ -381,7 +381,7 @@
     "\n",
     "        for meter in test_elec.submeters().meters:\n",
     "            # Only use the meters that we trained on (this saves time!)    \n",
-    "            gt[i][meter] = next(meter.load())\n",
+    "            gt[i][meter] = next(meter.load(sample_period=6))\n",
     "        gt[i] = pd.DataFrame({k:v.squeeze() for k,v in iteritems(gt[i])}, index=next(iter(gt[i].values())).index).dropna()\n",
     "\n",
     "    gt_overall = pd.concat(gt)\n",
@@ -395,9 +395,8 @@
     "    pred_index_utc = pred_overall.index.tz_convert(\"UTC\")\n",
     "    common_index_utc = gt_index_utc.intersection(pred_index_utc)\n",
     "\n",
-    "    local_timezone = train.metadata['timezone']\n",
     "\n",
-    "    common_index_local = common_index_utc.tz_convert(local_timezone)\n",
+    "    common_index_local = common_index_utc.tz_convert(train_timezone)\n",
     "\n",
     "    gt_overall = gt_overall.ix[common_index_local]\n",
     "    pred_overall = pred_overall.ix[common_index_local]\n",
@@ -416,7 +415,7 @@
     "        plt.legend()\n",
     "\n",
     "    resulting_f_score = {}\n",
-    "    threshold_w = 0\n",
+    "    threshold_w = 5\n",
     "    for appliance in gt_overall.columns:\n",
     "        temp_gt = gt_overall[appliance].copy()\n",
     "        temp_gt[temp_gt<=threshold_w] = 0\n",
@@ -449,10 +448,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "resulting_f_scores['CO'] = disaggr_and_fscore(CombinatorialOptimisation(),train_elec, test_elec,show_debug=True)"
+    "resulting_f_scores['CO'] = disaggr_and_fscore(CombinatorialOptimisation(),train_elec, test_elec,train.metadata['timezone'],show_debug=True)"
    ]
   },
   {
@@ -468,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resulting_f_scores['FHMM'] = disaggr_and_fscore(FHMM(),train_elec, test_elec,show_debug=True)"
+    "resulting_f_scores['FHMM'] = disaggr_and_fscore(FHMM(),train_elec, test_elec,train.metadata['timezone'],show_debug=True)"
    ]
   },
   {
@@ -482,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CompareF-Score of CO and FHMM"
+    "### Compare F-Score of CO and FHMM"
    ]
   },
   {
