--- a/5-NILMTK/Group_E NILMTK.ipynb
+++ b/5-NILMTK/Group_E NILMTK.ipynb
@@ -4,14 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Group E Assignment 5: NILMTK"
+    "# Group E Assignment 5: NILMTK\n",
+    "## Introduction\n",
+    "Non-Intrusive Load Monitoring is an approach for the energy disaggregation which aims to help to predict individual appliances power and their behavior through the whole household power meter. One can directly conclude that there is no need of the individual sensors, which makes NILM a cheaper alternative to monitoring appliances. Secondly, this helps to reduce energy consumption, save money, find and flatten peak power loads and, finally, go to sustainability. \n",
+    "\n",
+    "In this project we are going to explore NILMTK Python-framework through the UKDALE dataset to perform energy disaggregation. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1"
+    "## Exercise 1\n",
+    "In this exercise we mainly followed NILMTK documentation."
    ]
   },
   {
@@ -32,14 +37,18 @@
     "from nilmtk.timeframe import TimeFrame\n",
     "import pandas as pd\n",
     "\n",
-    "ukdale = DataSet('./data/ukdale.h5')"
+    "ukdale = DataSet('./data/ukdale.h5')\n",
+    "\n",
+    "\n",
+    "#train = DataSet('/path/redd.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Print out Metadata"
+    "### 1.2 Print out Metadata\n",
+    "Here we can see description of the dataset, e.g. which meter devices were used, location of the data reading, date, number of buildings, timeframe, creators etc. "
    ]
   },
   {
@@ -48,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_dict(ukdale.metadata)"
+    "print_dict(ukdale.metadata)\n"
    ]
   },
   {
@@ -73,7 +82,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Print out the sub-metered appliances in each building"
+    "### 1.3 Print out the sub-metered appliances in each building\n",
+    "\n",
+    "Here we can see all submeters attached to appliances for each building separately. We conclude that each building has exactly one main meter  there are no nested MeterGroups for appliances.\n",
+    "Each submeter contains information about its instance, building, as well as appliance (type and instance)\n"
    ]
   },
   {
@@ -87,15 +99,7 @@
     "for build in ukdale.buildings:\n",
     "    print(\"Appliances of Building \" +str(build))\n",
     "    print(ukdale.buildings[build].elec.submeters())\n",
-    "    print(\"---\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(\"---\")\n",
     "elec = ukdale.buildings[1].elec"
    ]
   },
@@ -119,7 +123,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Print out the type of power for mains and sub-meters"
+    "### 1.5 Print out the type of power for mains and sub-meters\n",
+    "Same type of power is used for mains and submeters:"
    ]
   },
   {
@@ -194,7 +199,7 @@
    "outputs": [],
    "source": [
     "all_window = next(ukdale_window.buildings[1].elec.load())\n",
-    "all_window.head()"
+    "#all_window.head()"
    ]
   },
   {
@@ -210,7 +215,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Calculate and plot the energy consumption fraction for each sub-meter"
+    "### 2.3 Calculate and plot the energy consumption fraction for each sub-meter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get energy fraction per each submeter, we call `energy_per_meter()` method for the submeters. We are not interested in the reactive power since submeters do not utilize it, hence, we remove it from the consideration. Then we extract active and apparent power from the `energy_fraction_per_submeter` dataframe and build plots correspondingly."
    ]
   },
   {
@@ -223,9 +235,10 @@
    "source": [
     "energy_fraction_per_submeter = elec.submeters().energy_per_meter().transpose().fillna(0)\n",
     "del energy_fraction_per_submeter['reactive']\n",
-    "active_en = energy_fraction_per_submeter['active']\n",
-    "active_en_frac = active_en/active_en.sum()\n",
-    "active_en_frac.plot(kind=\"bar\", figsize=(15,10), title=\"Active Energy Fraction\")"
+    "energy_fraction_per_submeter.div(energy_fraction_per_submeter.sum(axis=0))\n",
+    "\n",
+    "#plot active power\n",
+    "energy_fraction_per_submeter['active'].plot(kind=\"bar\", figsize=(15,10), title=\"Active Power Fraction\")"
    ]
   },
   {
@@ -234,16 +247,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apparent_en = energy_fraction_per_submeter['apparent']\n",
-    "apparent_en_frac = apparent_en/apparent_en.sum()\n",
-    "apparent_en_frac.plot(kind=\"bar\", figsize=(15,10), title=\"Apparent Energy Fraction\")"
+    "energy_fraction_per_submeter.plot(kind=\"bar\", figsize=(15,10), title=\"Apparent Power Fraction\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Highest Power Consuming Appliance"
+    "### 2.4 Highest Power Consuming Appliance\n",
+    "Fridge freezer in the building 1 is the most power-consuming appliance. "
    ]
   },
   {
@@ -275,7 +287,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3"
+    "## Exercise 3\n",
+    "First steps:\n",
+    " * set train set range until the end of the 24-03-2013\n",
+    " * set test set range from the 25-03-2013"
    ]
   },
   {
@@ -307,12 +322,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Then goes data exploration: \n",
+    "* First plot summarises power data for the building 3 for the site meter and various appliances during the training period\n",
+    "* Second plot indicates Site meter reading during the test period"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_elec.mains().plot()"
+    "train_elec.plot()"
    ]
   },
   {
@@ -339,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prepare a Method for Predicting and Calculating the F-Score"
+    "### Prepare a Method for Predicting and Calculating the F-Score\n"
    ]
   },
   {
@@ -357,7 +381,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Disaggregate and Calculate the F-Score With this function"
+    "### Disaggregate and Calculate the F-Score With this function\n",
+    "\n",
+    "Until the calculating F-score we mainly used used a sample code from the NILMTK documentation as for the reference for the model training and evaluation. Below the relevant steps are summarised:\n",
+    "*  Train the model on the training set\n",
+    "*  Read test data by chunks, apply the model to calculate predicted appliance power in the `pred` and ground truth data in the `gt`\n",
+    "*  Try to fit the data into the main memory by concatenating chunks into a pandas dataframe\n",
+    "*  Correspond data with the local timezone and put human-readable labels\n",
+    "\n",
+    "As we are using F1 score the model evaluation, we transfer from the energy disaggregation to the classification problem. Hence, if the predicted power is more than a threshold, the device is classified as ON. \n",
+    "\n",
+    "F1 score is defined as a harmonic mean of the precision and recall metrics in the binary classification problem. \n",
+    "Later we will explain the choice of the threshold value. \n"
    ]
   },
   {
@@ -366,10 +401,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def disaggr_and_fscore(algorithm,train_elec, test_elec,train_timezone,show_debug=True):\n",
+    "def disaggr_and_fscore(algorithm,train_elec, \n",
+    "                       test_elec,train_timezone, \n",
+    "                       threshold_w = 5,\n",
+    "                       show_debug=True):\n",
+    "    \n",
     "    start = time.time()\n",
     "    algorithm.train(train_elec,sample_period=6)\n",
-    "    end = time.time()\n",
+    "    end = time.time() \n",
     "    print(\"Train runtime =\", end-start, \"seconds.\")\n",
     "    pred = {}\n",
     "    gt= {}\n",
@@ -415,7 +454,7 @@
     "        plt.legend()\n",
     "\n",
     "    resulting_f_score = {}\n",
-    "    threshold_w = 5\n",
+    "    #threshold_w = 5 #moved to function declaration\n",
     "    for appliance in gt_overall.columns:\n",
     "        temp_gt = gt_overall[appliance].copy()\n",
     "        temp_gt[temp_gt<=threshold_w] = 0\n",
@@ -442,18 +481,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We are comparing two algorithms - Combinatorial Optimisation and Factorial Hidden Markov Model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.1 Combinatorial Optimisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now train the Combinatorial Optimisation model and apply it on the test data.  Below are two plots showing predicted and the ground truth power consumption.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "resulting_f_scores['CO'] = disaggr_and_fscore(CombinatorialOptimisation(),train_elec, test_elec,train.metadata['timezone'],show_debug=True)"
+    "resulting_f_scores['CO'] = disaggr_and_fscore(CombinatorialOptimisation(),\n",
+    "                                              train_elec, \n",
+    "                                              test_elec,train.metadata['timezone'],\n",
+    "                                              show_debug=True)"
    ]
   },
   {
@@ -464,12 +518,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same for the FHMM model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resulting_f_scores['FHMM'] = disaggr_and_fscore(FHMM(),train_elec, test_elec,train.metadata['timezone'],show_debug=True)"
+    "resulting_f_scores['FHMM'] = disaggr_and_fscore(FHMM(),\n",
+    "                                                train_elec, \n",
+    "                                                test_elec,\n",
+    "                                                train.metadata['timezone'],\n",
+    "                                                show_debug=False)"
    ]
   },
   {
@@ -483,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compare F-Score of CO and FHMM"
+    "## Compare F-Score of CO and FHMM\n"
    ]
   },
   {
@@ -507,11 +572,46 @@
    "source": [
     "f_score_df.plot(kind='bar')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms.\n",
+    "CO performed significantly better for the kettle classification, showing F-score of `0.016418` against `0.009945`. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better. \n",
+    "\n",
+    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valud of 0 yielded inadequate results:\n",
+    "\n",
+    "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score:\n",
+    "\n",
+    "\n",
+    "\n",
+    "| Appliance        | CO           | FHMM  |\n",
+    "| ------------- |-------------| -----|\n",
+    "| Electric space heater|\t0.189193\t|1.000000 |\n",
+    "| Kettle|\t0.396679|\t0.912690 |\n",
+    "| Laptop computer|\t0.397019|\t0.375311|\n",
+    "| Projector|\t0.088132|\t0.091067 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion and findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "foo"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk5)",
+   "display_name": "Python (nilmtk)",
    "language": "python",
    "name": "nilmtk-env"
   },
