--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -132,7 +132,7 @@
     "F1 score is defined as a harmonic mean of the precision and recall metrics in the binary classification problem. \n",
     "Later we will explain the choice of the threshold value. \n",
     "\n",
-    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better.\n",
+    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the difference is very small. Despite of these\n",
     "Now why we chose a threshold of 5. It was actually retrieved empirically since a valud of 0 yielded inadequate results:\n",
     "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score:\n",
     "\n",
@@ -143,13 +143,26 @@
     "| Laptop computer | 0.397019 | 0.375311 |\n",
     "| Projector\t| 0.088132 | 0.091067 |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion and findings\n",
+    "In this project we researched about Non-Intrusive Load Monitoring as an approach to predict individual appliances' powerand deduce which appliances are being used  using the whole household's power meter data. NILMTK is one of the open-source frameworks which allows to apply and compare energy disaggregation algorithms. The main goal of the project was to explore NILMTK Toolkit on the UKDALE dataset and compare Combinatorial Optimisation algorithm with the Factorial Hidden Markov Model based on the binary classification problem. This means, in turn, that based on the predicted appliance working power we would like to find out whether it is turned on or turned off.\n",
+    "\n",
+    "For the comparison we utilized one of the most common performance metrics - F1-score - the combination of the precision and recall. The most interesting part was selection a threshold for classification. \n",
+    "Our first trial was to set up a threshold to zero but this lead to inadequate F1-scores. We believe this happened due to the ature of the data: according to the data, when no appliances were working, the total power consumption of the building was not 0 W, but something betwen 0 W and 5 W. Thus, a threshold of 5 managed to produce meaningful results. \n",
+    "\n",
+    "Both CO and FHMM performed similarly and individual F1-scores for appliances do not differ dramatically. Thus, it is difficult to say which algorithm performed better. Talking appliance-wise, both algorithms did not show good performance in classifying kettle and projector, resulting in the F1-score of ~0.1 while yielding F1-score of ~0.4 for Electric space heater and Laptop computer which is a bit better. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nilmtk)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nilmtk-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -161,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
