--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -32,19 +32,71 @@
     "\n",
     "The next task is to print out the sub-metered appliances in each building. Here we can see all submeters attached to appliances for each building separately. We conclude that each building has exactly one main meter there are no nested MeterGroups for appliances. Each submeter contains information about its instance, building, as well as appliance (type and instance).\n",
     "\n",
+    "The type of power for mains and sub-meters are shown below:\n",
+    "```python\n",
+    "elec.mains().available_ac_types('power')\n",
+    "Out[]: ['active', 'apparent']\n",
+    "elec.submeters().available_ac_types('power')\n",
+    "Out[]: ['active', 'apparent']\n",
+    "```\n",
+    "\n",
     "We calculate the total energy consumption for building 1 in kWh and have below result:\n",
     "```python\n",
     "apparent    5835.953591\n",
     "active      5008.108254\n",
     "dtype: float64\n",
-    "```"
+    "```\n",
+    "\n",
+    "We can also get the wiring diagram for the MeterGroup which consist of 53 instances for Building 1:\n",
+    "\n",
+    "<img src='./images/wirediagram.png'>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### EXERCISE 2: Appliances and power consumed\n",
+    "\n",
+    "We select and plot the power that is used by the following appliances of building 1 from 2014-04-28 until 2014-04-29' for fridge freezer and light as below: \n",
+    "\n",
+    "<img src='./images/plot1.png'>\n",
+    "\n",
+    "And the plot of the overall power consumption for a the same day is shown below:\n",
+    "\n",
+    "<img src='./images/plot2.png'>\n",
+    "\n",
+    "To get energy fraction per each submeter, we call energy_per_meter() method for the submeters. We are not interested in the reactive power since submeters do not utilize it, hence, we remove it from the consideration. Then we extract active and apparent power from the energy_fraction_per_submeter dataframe and build plots correspondingly. The plot of energy consumption for each sub-meter is shown below for active and apparent power fraction:\n",
+    "\n",
+    "<img src='./images/plot3.png'>\n",
+    "\n",
+    "<img src='./images/plot4.png'>\n",
+    "\n",
+    "#### Data filtering\n",
+    "With NILM we can easily filter dataset as we have been practicing in this exercise. Some finding from our filtering task are below:\n",
+    "<ol>\n",
+    "  <li>The appliance with the highest power consumption in building 1 is instance number 12 which is <b>fridge freezer</b>. </li>\n",
+    "  <li>Appliances of the type “single-phase induction motor” consist of:\n",
+    "      <ol>\n",
+    "          <li>'boiler'</li>\n",
+    "          <li>'solar thermal pumping station'</li>\n",
+    "          <li>'washer dryer'</li>\n",
+    "          <li>'dish washer'</li>\n",
+    "          <li>'kettle', 'food processor', 'toasted sandwich maker'</li>\n",
+    "          <li>'toaster', 'kitchen aid', 'food processor'</li>\n",
+    "          <li>'fridge freezer'</li>\n",
+    "          <li>'breadmaker'</li>\n",
+    "          <li>'vacuum cleaner'</li>\n",
+    "          <li>'fan'</li>\n",
+    "          <li>'immersion heater', 'water pump', 'security alarm', 'fan', 'drill', 'laptop computer'</li>\n",
+    "      <ol>\n",
+    "  </li>\n",
+    "</ol>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
