--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -78,17 +78,17 @@
     "  <li>The appliance with the highest power consumption in building 1 is instance number 12 which is <b>fridge freezer</b>. </li>\n",
     "  <li>Appliances of the type “single-phase induction motor” consist of:\n",
     "      <ol>\n",
-    "          <li>'boiler'</li>\n",
-    "          <li>'solar thermal pumping station'</li>\n",
-    "          <li>'washer dryer'</li>\n",
-    "          <li>'dish washer'</li>\n",
-    "          <li>'kettle', 'food processor', 'toasted sandwich maker'</li>\n",
-    "          <li>'toaster', 'kitchen aid', 'food processor'</li>\n",
-    "          <li>'fridge freezer'</li>\n",
-    "          <li>'breadmaker'</li>\n",
-    "          <li>'vacuum cleaner'</li>\n",
-    "          <li>'fan'</li>\n",
-    "          <li>'immersion heater', 'water pump', 'security alarm', 'fan', 'drill', 'laptop computer'</li>\n",
+    "          <li>boiler</li>\n",
+    "          <li>solar thermal pumping station</li>\n",
+    "          <li>washer dryer</li>\n",
+    "          <li>dish washer</li>\n",
+    "          <li>kettle, food processor, toasted sandwich maker</li>\n",
+    "          <li>toaster, kitchen aid, food processor</li>\n",
+    "          <li>fridge freezer</li>\n",
+    "          <li>breadmaker</li>\n",
+    "          <li>vacuum cleaner</li>\n",
+    "          <li>fan</li>\n",
+    "          <li>immersion heater, water pump, security alarm, fan, drill, laptop computer</li>\n",
     "      <ol>\n",
     "  </li>\n",
     "</ol>\n"
@@ -97,6 +97,58 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### EXERCISE 3: Training and disaggregation\n",
+    "There are three disaggregation algorithms provided by NILMTK. Combinatorial Optimisation (CO) and FHMM are non-event based, while Hart’s algo is event based. In this exercise, we apply the algorithm CO and FHMM to disaggregate and plot the daily power consumption for building 3.\n",
+    "\n",
+    "First, we set train set range until the end of the 24-03-2013 and test set range from the 25-03-2013. Plot of summarises power data for the building 3 for the site meter and various appliances during the training period shown below:\n",
+    "\n",
+    "<img src='./images/plot5.png'>\n",
+    "\n",
+    "CO models each appliance to consist of a fixed number of states and assigns different power levels to each of these states. The optimisation function involves finding the optimal combination of appliance states for different appliances which minimises the difference between predicted and observed aggregate power. In FHMM, each appliance is modelled as a hidden Markov model (HMM), where the hidden component is its state, and the observed component is its power draw. Like CO, FHMM has time complexity exponential in the number of appliances and thus become intractable for a large number of appliances. [\"If You Measure It, Can You Improve It? Exploring The Value of Energy Disaggregation\" - Nipun Batra, et al.].\n",
+    "\n",
+    "Below are two plots showing predicted and the ground truth power consumption using CO:\n",
+    "\n",
+    "<img src='./images/pred-co.png'>\n",
+    "\n",
+    "<img src='./images/gt-co.png'>\n",
+    "\n",
+    "And below are two plots showing predicted and the ground truth power consumption using FHMM:\n",
+    "\n",
+    "<img src='./images/pred-fhmm.png'>\n",
+    "\n",
+    "<img src='./images/gt-fhmm.png'>\n",
+    "\n",
+    "#### Disaggregate and Calculate the F-Score With this function\n",
+    "\n",
+    "Until the calculating F-score we mainly used used a sample code from the NILMTK documentation as for the reference for the model training and evaluation. Below the relevant steps are summarised:\n",
+    "*  Train the model on the training set\n",
+    "*  Read test data by chunks, apply the model to calculate predicted appliance power in the `pred` and ground truth data in the `gt`\n",
+    "*  Try to fit the data into the main memory by concatenating chunks into a pandas dataframe\n",
+    "*  Correspond data with the local timezone and put human-readable labels\n",
+    "\n",
+    "As we are using F1 score the model evaluation, we transfer from the energy disaggregation to the classification problem. Hence, if the predicted power is more than a threshold, the device is classified as ON. \n",
+    "\n",
+    "F1 score is defined as a harmonic mean of the precision and recall metrics in the binary classification problem. \n",
+    "Later we will explain the choice of the threshold value. \n",
+    "\n",
+    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better.\n",
+    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valud of 0 yielded inadequate results:\n",
+    "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score:\n",
+    "\n",
+    "| Appliance| CO | FHMM |\n",
+    "| --- | --- | --- |\n",
+    "| Electric space heater | 0.189193 | 1.000000 |\n",
+    "| Kettle | 0.396679\t| 0.912690 |\n",
+    "| Laptop computer | 0.397019 | 0.375311 |\n",
+    "| Projector\t| 0.088132 | 0.091067 |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
