--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -119,9 +119,9 @@
     "\n",
     "<img src='./images/gt-fhmm.png'>\n",
     "\n",
-    "#### Disaggregate and Calculate the F-Score With this function\n",
+    "### EXERCISE 4: Calculate F-Score of CO and FHMM\n",
     "\n",
-    "Until the calculating F-score we mainly used used a sample code from the NILMTK documentation as for the reference for the model training and evaluation. Below the relevant steps are summarised:\n",
+    "Until the calculating F-score we mainly used a sample code from the NILMTK documentation as for the reference for the model training and evaluation. Below the relevant steps are summarised:\n",
     "*  Train the model on the training set\n",
     "*  Read test data by chunks, apply the model to calculate predicted appliance power in the `pred` and ground truth data in the `gt`\n",
     "*  Try to fit the data into the main memory by concatenating chunks into a pandas dataframe\n",
@@ -143,13 +143,6 @@
     "| Laptop computer | 0.397019 | 0.375311 |\n",
     "| Projector\t| 0.088132 | 0.091067 |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
