--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -17,7 +17,7 @@
     "## Introduction\n",
     "Non-Intrusive Load Monitoring is an approach for the energy disaggregation which aims to help to predict individual appliances power and their behavior through the whole household power meter. One can directly conclude that there is no need of the individual sensors, which makes NILM a cheaper alternative to monitoring appliances. Secondly, this helps to reduce energy consumption, save money, find and flatten peak power loads and, finally, go to sustainability. \n",
     "\n",
-    "In this project we are going to explore NILMTK Python-framework through the UKDALE dataset to perform energy disaggregation. "
+    "In this project we are going to explore NILMTK, an open source toolkit implemented in Python, through the UKDALE dataset to perform energy disaggregation. "
    ]
   },
   {
@@ -47,7 +47,7 @@
     "dtype: float64\n",
     "```\n",
     "\n",
-    "We can also get the wiring diagram for the MeterGroup which consist of 53 instances for Building 1:\n",
+    "We can also get the wiring diagram for the MeterGroup which consist of 52 (submeters 2 - 53) instances for Building 1:\n",
     "\n",
     "<img src='./images/wirediagram.png'>"
    ]
@@ -58,11 +58,11 @@
    "source": [
     "### EXERCISE 2: Appliances and power consumed\n",
     "\n",
-    "We select and plot the power that is used by the following appliances of building 1 from 2014-04-28 until 2014-04-29' for fridge freezer and light as below: \n",
+    "We select and plot the power that is used by the following appliances of building 1 from 2014-04-28 until 2014-04-29 for fridge freezer and light as below: \n",
     "\n",
     "<img src='./images/plot1.png'>\n",
     "\n",
-    "And the plot of the overall power consumption for a the same day is shown below:\n",
+    "And the plot of the overall power consumption for the same day is shown below:\n",
     "\n",
     "<img src='./images/plot2.png'>\n",
     "\n",
