--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -133,7 +133,7 @@
     "Later we will explain the choice of the threshold value. \n",
     "\n",
     "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better.\n",
-    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valud of 0 yielded inadequate results:\n",
+    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valid of 0 yielded inadequate results:\n",
     "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score:\n",
     "\n",
     "| Appliance| CO | FHMM |\n",
@@ -143,6 +143,13 @@
     "| Laptop computer | 0.397019 | 0.375311 |\n",
     "| Projector\t| 0.088132 | 0.091067 |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
