--- a/5-NILMTK/Group_E NILMTK Report.ipynb
+++ b/5-NILMTK/Group_E NILMTK Report.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "After we load data into memory, we can printout the UKDALE's metadata. In metadata we can see description of the dataset, e.g. which meter devices were used, location of the data reading, date, number of buildings, timeframe, creators etc.\n",
     "\n",
-    "The next task is to print out the sub-metered appliances in each building. Here we can see all submeters attached to appliances for each building separately. We conclude that each building has exactly one main meter there are no nested MeterGroups for appliances. Each submeter contains information about its instance, building, as well as appliance (type and instance).\n",
+    "The next task is to print out the sub-metered appliances in each building. Here we can see all submeters attached to appliances for each building separately. We conclude that each building has exactly one main meter and there are no nested MeterGroups for appliances. Each submeter contains information about its instance, building, as well as appliance (type and instance).\n",
     "\n",
     "The type of power for mains and sub-meters are shown below:\n",
     "```python\n",
@@ -132,16 +132,19 @@
     "F1 score is defined as a harmonic mean of the precision and recall metrics in the binary classification problem. \n",
     "Later we will explain the choice of the threshold value. \n",
     "\n",
-    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better.\n",
-    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valid of 0 yielded inadequate results:\n",
-    "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score:\n",
-    "\n",
     "| Appliance| CO | FHMM |\n",
     "| --- | --- | --- |\n",
-    "| Electric space heater | 0.189193 | 1.000000 |\n",
-    "| Kettle | 0.396679\t| 0.912690 |\n",
-    "| Laptop computer | 0.397019 | 0.375311 |\n",
-    "| Projector\t| 0.088132 | 0.091067 |"
+    "| Electric space heater | 0.379545 | 0.367336 |\n",
+    "| Kettle | 0.016709\t| 0.009945 |\n",
+    "| Laptop computer | 0.373208 | 0.351022 |\n",
+    "| Projector\t| 0.087779 | 0.091067 |\n",
+    "\n",
+    "<img src='./images/plot6.png'>\n",
+    "\n",
+    "Here one can see F-scores for the individual appliance level using CO and FHMM algorithms. CO performed significantly better for the kettle classification, showing F-score of 0.016418 against 0.009945. It also showed slightly higher F-metric for the Electric space heater and the Laptop computer but not that significant. In contrast, FHMM has an F-score of 0.091067 for the projector versus 0.087560 by CO but the diffence is very small. Thus, we conclude that Combinatorial Optimisation performed better.\n",
+    "Now why we chose a threshold of 5. It was actually retrieved empirically since a valid of 0 yielded inadequate results:\n",
+    "We chose empirically a classification threshold to be 5 since a threshold of 0 gave inadequate F-score.\n",
+    "\n"
    ]
   },
   {
@@ -160,9 +163,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (nilmtk)",
    "language": "python",
-   "name": "python3"
+   "name": "nilmtk-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -174,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
