--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -13,23 +13,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import h5py\n",
     "import os, glob\n",
     "import re\n",
+    "import itertools\n",
     "from datetime import datetime, date, time\n",
+    "from six import iteritems\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Blond(object):\n",
     "    \"\"\"\n",
-    "    \n",
+    "        TODO: figure out how to close files\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, date):\n",
@@ -49,14 +52,15 @@
     "                file_hm = datetime.strptime(ts_format, '%Y-%m-%dT%H-%M-%S').time()\n",
     "\n",
     "                if start_hm <= file_hm <= end_hm:\n",
-    "                    yield h5py.File(file_name,'r')\n",
+    "                    yield h5py.File(path_to_files + file_name,'r+')\n",
+    "                         \n",
     "            \n",
     "    def read_medal(self, start_hm, end_hm):\n",
     "        \n",
     "        \"\"\"\n",
     "            each MEDAL is located in a separate folder, thus, we search each folder\n",
     "        \"\"\"\n",
-    "        path_to_files = './data/medal*'\n",
+    "        path_to_files = './data/medal*/'\n",
     "        for folder in glob.glob(path_to_files):            \n",
     "            files_all = next(os.walk(folder))[2]  \n",
     "        \n",
@@ -69,9 +73,40 @@
     "                    file_hm = datetime.strptime(ts_format, '%Y-%m-%dT%H-%M-%S').time()\n",
     "\n",
     "                    if start_hm <= file_hm <= end_hm:\n",
-    "                        yield h5py.File(file_name, 'r')\n",
+    "                        yield h5py.File(folder + file_name, 'r+') \n",
+    "                        \n",
+    "                    \n",
+    "                     \n",
+    "    def it_center_signal(self, it_medal, signal):\n",
+    "        \"\"\"no DC_offset in CLEAR data\"\"\"   \n",
+    "        for data in it_medal:\n",
+    "            DC_offset = data[signal].attrs['removed_offset']\n",
+    "            data[signal][:] = data[signal][:] + DC_offset\n",
+    "            yield data\n",
+    "            \n",
+    "    def it_calibrate(self, it_data, signal):\n",
+    "        for data in it_data:\n",
+    "            factor = data[signal].attrs['calibration_factor']\n",
+    "            data[signal][:] = (data[signal][:] * factor)\n",
+    "            yield data\n",
     "        \n",
-    "            "
+    "            \n",
+    "        \n",
+    "    def merge_into_dict(self, it_data, signal):\n",
+    "        \n",
+    "        signal_dict = dict()\n",
+    "        for i, data in enumerate(it_data):   \n",
+    "            \"\"\" Dictionary output:\n",
+    "                {0: <HDF5 dataset \"current1\": shape (15000000,), type \"<i2\">,\n",
+    "                1: <HDF5 dataset \"current1\": shape (15000000,), type \"<i2\">,\n",
+    "                ...\n",
+    "            \"\"\"\n",
+    "            signal_dict[i] = data[signal] \n",
+    "        \n",
+    "        return signal_dict     \n",
+    "    \n",
+    "          \n",
+    "     "
    ]
   },
   {
@@ -82,8 +117,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read files and prepare data for plotting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +137,38 @@
     "\n",
     "\"\"\"Read MEDAL and CLEAR data \"\"\"\n",
     "it_medal = blond.read_medal(start_hm, end_hm)\n",
-    "it_clear = blond.read_clear(start_hm, end_hm)\n"
+    "it_clear = blond.read_clear(start_hm, end_hm)\n",
+    "\n",
+    "\n",
+    "\"\"\"center and calibrate MEDAL data\"\"\"\n",
+    "it_data_calibrated = blond.it_calibrate(blond.it_center_signal(it_medal, 'current1'), 'current1')\n",
+    "\n",
+    "\"\"\"define a signal and prepare data to the format suitable for plotting\"\"\"\n",
+    "signal = 'current1'\n",
+    "d = blond.merge_into_dict(it_data_calibrated, 'current1')\n",
+    "data={}\n",
+    "it_merged_data = itertools.chain(*pd.DataFrame(data = d).values)\n",
+    "\n",
+    "\n",
+    "\"\"\"read first 10,000,000 values\"\"\"\n",
+    "data['medals_'+signal] = list(itertools.islice(it_merged_data, 10000000) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
