added exercise 3 toy example

--- a/6-Data_Prep_and_Vis/ex6_new.ipynb
+++ b/6-Data_Prep_and_Vis/ex6_new.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part I. Data Loading and Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -93,9 +100,8 @@
     "                        \n",
     "\n",
     "    def center(self, device, signal):  \n",
-    "        \"\"\"_count is added to run centering and calibrating only once\"\"\"\n",
     "        if device+signal in self._SD_centered:\n",
-    "            print(\"Signal '{}' for '{}' has been already calibrated.\".format(signal, device))\n",
+    "            print(\"Signal '{}' for '{}' has been already centered.\".format(signal, device))\n",
     "            return\n",
     "        else:\n",
     "            self._SD_centered.append(device+signal)\n",
@@ -103,7 +109,7 @@
     "            if device != 'clear': #NO OFFSET FOR CLEAR DEVICE\n",
     "                for i, data_file in enumerate(data_list):\n",
     "                    DC_offset = data_file[signal].attrs['removed_offset'] \n",
-    "                    #print(DC_offset)\n",
+    "                    print(DC_offset)\n",
     "                    data_file[signal][:] = data_file[signal][:] + DC_offset\n",
     "                    self._day_data[device][i] = data_file\n",
     "\n",
@@ -117,9 +123,9 @@
     "            data_list = self._day_data[device]\n",
     "            for i, data_file in enumerate(data_list):\n",
     "                factor = data_file[signal].attrs['calibration_factor']\n",
-    "                #print(factor)\n",
+    "                print(factor)\n",
     "                data_file[signal][:] = (data_file[signal][:] * factor)\n",
-    "                self._day_data[device][i] = data_file\n",
+    "                self._day_data[device][i] = data_file.astype()\n",
     "            \n",
     "            \n",
     "            \n",
@@ -135,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Reading and Exploration"
+    "###  1. Data Reading and Exploration"
    ]
   },
   {
@@ -207,8 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = 'medal-3'\n",
-    "signal = 'voltage'\n",
+    "device = 'medal-1'\n",
+    "signal = 'current1'\n",
     "blond.center(device, signal)\n",
     "blond.calibrate(device, signal)\n",
     "it_signal = blond.it_read_signal(device, signal)\n",
@@ -224,7 +230,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['medal-2_current1'].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part II. Data Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Function to run dash app in jupyter:\n",
+    "https://community.plot.ly/t/can-i-run-dash-app-in-jupyter/5235\n",
+    "\"\"\"\n",
+    "from IPython import display\n",
+    "def show_app(app,  # type: dash.Dash\n",
+    "             port=9999,\n",
+    "             width=700,\n",
+    "             height=350,\n",
+    "             offline=True,\n",
+    "             style=True,\n",
+    "             **dash_flask_kwargs):\n",
+    "    \"\"\"\n",
+    "    Run the application inside a Jupyter notebook and show an iframe with it\n",
+    "    :param app:\n",
+    "    :param port:\n",
+    "    :param width:\n",
+    "    :param height:\n",
+    "    :param offline:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    url = 'http://localhost:%d' % port\n",
+    "    iframe = '<iframe src=\"{url}\" width={width} height={height}></iframe>'.format(url=url,\n",
+    "                                                                                  width=width,\n",
+    "                                                                                  height=height)\n",
+    "    display.display_html(iframe, raw=True)\n",
+    "    if offline:\n",
+    "        app.css.config.serve_locally = True\n",
+    "        app.scripts.config.serve_locally = True\n",
+    "    if style:\n",
+    "        external_css = [\"https://fonts.googleapis.com/css?family=Raleway:400,300,600\",\n",
+    "                        \"https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\",\n",
+    "                        \"http://getbootstrap.com/dist/css/bootstrap.min.css\", ]\n",
+    "\n",
+    "        for css in external_css:\n",
+    "            app.css.append_css({\"external_url\": css})\n",
+    "\n",
+    "        external_js = [\"https://code.jquery.com/jquery-3.2.1.min.js\",\n",
+    "                       \"https://cdn.rawgit.com/plotly/dash-app-stylesheets/a3401de132a6d0b652ba11548736b1d1e80aa10d/dash-goldman-sachs-report-js.js\",\n",
+    "                       \"http://getbootstrap.com/dist/js/bootstrap.min.js\"]\n",
+    "\n",
+    "        for js in external_js:\n",
+    "            app.scripts.append_script({\"external_url\": js})\n",
+    "\n",
+    "    return app.run_server(debug=False,  # needs to be false in Jupyter\n",
+    "                          port=port,\n",
+    "                          **dash_flask_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1(children='Hello Dash'),\n",
+    "\n",
+    "    html.Div(children='''\n",
+    "        Dash: A web application framework for Python.\n",
+    "    '''),\n",
+    "\n",
+    "    dcc.Graph(\n",
+    "        id='example-graph',\n",
+    "        figure={\n",
+    "            'data': [\n",
+    "                {'x': [1, 2, 3], 'y': [4, 1, 2], 'type': 'line', 'name': 'SF'}\n",
+    "            ],\n",
+    "            'layout': {\n",
+    "                'title': 'Dash Data Visualization'\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "\n",
+    "show_app(app)"
+   ]
   }
  ],
  "metadata": {
