removed some changes which forgot to do before

--- a/6-Data_Prep_and_Vis/ex6_new.ipynb
+++ b/6-Data_Prep_and_Vis/ex6_new.ipynb
@@ -109,7 +109,7 @@
     "            if device != 'clear': #NO OFFSET FOR CLEAR DEVICE\n",
     "                for i, data_file in enumerate(data_list):\n",
     "                    DC_offset = data_file[signal].attrs['removed_offset'] \n",
-    "                    print(DC_offset)\n",
+    "                    #print(DC_offset)\n",
     "                    data_file[signal][:] = data_file[signal][:] + DC_offset\n",
     "                    self._day_data[device][i] = data_file\n",
     "\n",
@@ -123,9 +123,9 @@
     "            data_list = self._day_data[device]\n",
     "            for i, data_file in enumerate(data_list):\n",
     "                factor = data_file[signal].attrs['calibration_factor']\n",
-    "                print(factor)\n",
+    "                #print(factor)\n",
     "                data_file[signal][:] = (data_file[signal][:] * factor)\n",
-    "                self._day_data[device][i] = data_file.astype()\n",
+    "                self._day_data[device][i] = data_file\n",
     "            \n",
     "            \n",
     "            \n",
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "device = 'medal-1'\n",
-    "signal = 'current1'\n",
+    "signal = 'voltage'\n",
     "blond.center(device, signal)\n",
     "blond.calibrate(device, signal)\n",
     "it_signal = blond.it_read_signal(device, signal)\n",
